<resources>
    <string name="app_name">TakeGo</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Please enter your ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main__drawer">MainActivity_Drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="head_image">head_image</string>
    <string name="hello_client_name">Hello client_name!<br />
        please select your dream Car</string>
    <string name="hello_client_name_branch">Hello client_name!<br />
        please select your branch</string>

    <string name="user_name">User Name</string>
    <string name="new_user">New User</string>
    <string name="sign_up">Sign Up</string>
    <string name="Add_Client">Add Client</string>
    <string name="private_name">Private Name</string>
    <string name="family_name">Family Name</string>
    <string name="Id">Id</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="credit_card">Credit Card</string>
    <string name="next">Next</string>
    <string name="Info">Culture and hard work created Enterprise Enterprise Rent-A-Car is an ongoing American success story. Our guiding principles, and humble beginning, revolve around personal honesty and integrity. We believe in strengthening our communities one neighborhood at a time, serving our</string>
    <string name="moreInfo">Today, our massive network means Enterprise is the largest transportation solutions provider. We offer car and truck rentals, as well as car sharing and car sales. We’re in over 85 countries with more than 7,600 locations. What does this mean to our customers? We are there when you need us.</string>
    <string name="take_go_rent_cars"><![CDATA[Take&Go - Rent Cars]]></string>
    <string name="start_speach">Welcome to Sixt Rent Car. You can order a car by - cars filter by branches - branches filter by cars.</string>
    <string name="activity_add_user_password">Add New User</string>
    <string name="LoginStart">TakeGo</string>
</resources>
